@@ -15,6 +15,7 @@
   * The ri data generator now supports ^T
   * C parser now handles Document-method better.  Bug #27329.
   * RDoc::Markup::AttributeManager no longer uses global state.
+  * ri will use the RI_PAGER environment variable to find a pager.
 
 * N Bug Fixes
   * The :attr: directives now use the name given to create an attribute.  See
